Agregada llamada a clean-and-delete-sh en STAGING PIPELINE Jenkinsfile

--- a/pipelines/PIPELINE-FULL-STAGING/Jenkinsfile
+++ b/pipelines/PIPELINE-FULL-STAGING/Jenkinsfile
@@ -54,6 +54,8 @@ pipeline {
     }
     post { 
         always { 
+            echo 'Clean ENV: delete app and delete stack'
+	    sh "bash pipelines/common-steps/clean-and-delete.sh"
             echo 'Clean env: delete dir'
             cleanWs()
         }
