Correcion de linea para correcto funcionamiento de la creacion de Translate

--- a/template.yaml
+++ b/template.yaml
@@ -33,6 +33,8 @@ Resources:
       CodeUri: src/
       Role: !Sub "arn:aws:iam::${AWS::AccountId}:role/LabRole"
       Handler: translate.translate
+      Runtime: python3.7
+      Events:
         Create:
           Type: Api
           Properties:
